crates/alien-terraform/tests/generator/snapshots/generator__generator__helpers__gcp_frozen_sandbox_template_management.snap
---
source: crates/alien-terraform/tests/generator/helpers.rs
expression: buf
---
=== versions.tf ===
terraform {
  required_version = ">= 1.5.0"

  required_providers {
    google = {
      source  = "hashicorp/google"
      version = ">= 5.0"
    }
    google-beta = {
      source  = "hashicorp/google-beta"
      version = ">= 6.0"
    }
    time = {
      source  = "hashicorp/time"
      version = ">= 0.9"
    }
    random = {
      source  = "hashicorp/random"
      version = ">= 3.6"
    }
  }
}

=== variables.tf ===
variable "resource_prefix" {
  type        = string
  description = "Optional stable physical resource prefix. Leave empty to generate one."
  default     = ""

  validation {
    condition     = var.resource_prefix == "" || (can(regex("^[a-z][a-z0-9-]{1,38}[a-z0-9]$", var.resource_prefix)) && length(regexall("--", var.resource_prefix)) == 0)
    error_message = "resource_prefix must be 3-40 characters: lowercase letters, numbers, and hyphens; start with a letter; end with a letter or number; and not contain consecutive hyphens."
  }
}

variable "name" {
  type        = string
  description = "Human-readable application name shown in setup and cloud IAM review metadata."
}

variable "token" {
  type        = string
  description = "Install token from the application setup page. This is the same token used by the deploy CLI --token flag."
  sensitive   = true
}

variable "management_url" {
  type        = string
  description = "Optional management endpoint used by pull-style runtimes."
  default     = ""
}

variable "deployment_model" {
  type        = string
  description = "How runtime updates are delivered after setup."
  default     = "push"

  validation {
    condition     = contains(["push", "pull"], var.deployment_model)
    error_message = "deployment_model must be one of: push, pull."
  }
}

variable "advanced_settings_json" {
  type        = string
  description = "Advanced JSON-encoded deployment settings. Most installations should use the typed variables in this module instead."
  default     = "{}"
  sensitive   = true
}

variable "advanced_settings_overlay_json" {
  type        = string
  description = "JSON-encoded deployment settings merged over the package defaults. Use this for partial advanced-setting overrides that must preserve generated defaults such as compute selections."
  default     = "{}"
  sensitive   = true
}

variable "updates_mode" {
  type        = string
  description = "How application updates are delivered after setup."
  default     = "auto"

  validation {
    condition     = contains(["auto", "approval-required"], var.updates_mode)
    error_message = "updates_mode must be one of: auto, approval-required."
  }
}

variable "telemetry_mode" {
  type        = string
  description = "How logs, metrics, and traces are collected."
  default     = "auto"

  validation {
    condition     = contains(["off", "auto", "approval-required"], var.telemetry_mode)
    error_message = "telemetry_mode must be one of: off, auto, approval-required."
  }
}

variable "heartbeats_mode" {
  type        = string
  description = "Whether runtime health checks are enabled."
  default     = "on"

  validation {
    condition     = contains(["off", "on"], var.heartbeats_mode)
    error_message = "heartbeats_mode must be one of: off, on."
  }
}

variable "gcp_project" {
  type        = string
  description = "GCP project ID."
}

variable "gcp_region" {
  type        = string
  description = "GCP region."
  default     = "us-central1"
}

variable "managing_service_account_email" {
  type        = string
  description = "Email of the management service account allowed to impersonate setup-created identities."
  default     = ""
}

variable "gcp_manage_custom_roles" {
  type        = bool
  description = "Whether this module creates the GCP project custom roles it binds. Set to false when those roles are managed outside this stack."
  default     = true
}

variable "gcp_custom_role_prefix" {
  type        = string
  description = "Prefix used for GCP project custom role IDs when gcp_manage_custom_roles is false. Empty uses resource_prefix."
  default     = ""
}

=== providers.tf ===
provider "google" {
  project = var.gcp_project
  region  = var.gcp_region
}

provider "google-beta" {
  project = var.gcp_project
  region  = var.gcp_region
}

=== resource_prefix.tf ===
resource "random_id" "resource_prefix" {
  byte_length = 4
}

=== locals.tf ===
locals {
  resource_prefix              = var.resource_prefix == "" ? format("a%s", random_id.resource_prefix.hex) : var.resource_prefix
  deployment_name              = var.name
  gcp_custom_role_prefix       = var.gcp_custom_role_prefix != "" ? substr(replace(lower(var.gcp_custom_role_prefix), "-", "_"), 0, 18) : length(replace(lower(local.resource_prefix), "-", "_")) <= 18 ? replace(lower(local.resource_prefix), "-", "_") : format("%s_%s", substr(replace(lower(local.resource_prefix), "-", "_"), 0, 9), substr(sha256(local.resource_prefix), 0, 8))
  deployment_platform          = "gcp"
  deployment_target            = "gcp"
  deployment_region            = var.gcp_region
  deployment_management_config = var.deployment_model == "push" ? { platform = "gcp", projectId = var.gcp_project, serviceAccountEmail = var.managing_service_account_email } : null
  advanced_settings            = merge(jsondecode(var.advanced_settings_json), jsondecode(var.advanced_settings_overlay_json))
  deployment_settings          = merge(local.advanced_settings, { deploymentModel = var.deployment_model, updates = var.updates_mode, telemetry = var.telemetry_mode, heartbeats = var.heartbeats_mode })
  deployment_resources = [
    {
      id   = "agents-engine"
      type = "gcp_agent_platform_engine"
      importData = {
        engineId = google_vertex_ai_reasoning_engine.agents_engine.name
      }
    },
    {
      id   = "management"
      type = "remote-stack-management"
      importData = {
        projectId                    = var.gcp_project
        projectNumber                = data.google_project.current.number
        serviceAccountEmail          = google_service_account.management.email
        serviceAccountUniqueId       = google_service_account.management.unique_id
        managementPermissionsApplied = true
      }
    },
    {
      id   = "agents"
      type = "sandbox"
      importData = {
        region = var.gcp_region
      }
    }
  ]
}

=== agents_engine.tf ===
resource "google_vertex_ai_reasoning_engine" "agents_engine" {
  provider     = google-beta
  region       = var.gcp_region
  display_name = "${local.resource_prefix}-agents-engine"
  labels = {
    "managed-by"    = "setup"
    deployment      = local.resource_prefix
    resource        = "agents-engine"
    "resource-type" = "sandbox-engine"
  }
}

=== management.tf ===
data "google_project" "current" {
  project_id = var.gcp_project
}

resource "google_service_account" "management" {
  project      = var.gcp_project
  account_id   = format("%s-%s", trim(substr(replace(lower(format("a-%s-management", local.resource_prefix)), "_", "-"), 0, 21), "-"), substr(sha1(replace(lower(format("%s-management", local.resource_prefix)), "_", "-")), 0, 8))
  display_name = "${local.deployment_name}: Management service account"
  description  = "Management cloud identity for ${local.deployment_name}. Resource prefix: ${local.resource_prefix}."
}

resource "google_project_iam_custom_role" "gcp_role_sandbox_heartbeat" {
  count       = var.gcp_manage_custom_roles ? 1 : 0
  project     = var.gcp_project
  role_id     = format("role_%s_sandbox_heartbeat", local.gcp_custom_role_prefix)
  title       = "${local.deployment_name}: Sandbox heartbeat"
  description = "Used by ${local.deployment_name}. Allows reading sandbox parent state. Resource prefix: ${local.resource_prefix}."
  stage       = "GA"
  permissions = [
    "aiplatform.sandboxEnvironmentTemplates.get"
  ]
}

resource "google_project_iam_member" "gcp_role_sandbox_heartbeat_management_binding_0" {
  project = var.gcp_project
  role    = var.gcp_manage_custom_roles ? google_project_iam_custom_role.gcp_role_sandbox_heartbeat[0].name : format("projects/%s/roles/role_%s_sandbox_heartbeat", var.gcp_project, local.gcp_custom_role_prefix)
  member  = "serviceAccount:${google_service_account.management.email}"
}

resource "google_project_iam_custom_role" "gcp_role_sandbox_management" {
  count       = var.gcp_manage_custom_roles ? 1 : 0
  project     = var.gcp_project
  role_id     = format("role_%s_sandbox_management", local.gcp_custom_role_prefix)
  title       = "${local.deployment_name}: Sandbox management"
  description = "Used by ${local.deployment_name}. Allows creating and terminating sandboxes (no access to sandbox contents). Resource prefix: ${local.resource_prefix}."
  stage       = "GA"
  permissions = [
    "aiplatform.sandboxEnvironments.create",
    "aiplatform.sandboxEnvironments.delete",
    "aiplatform.sandboxEnvironments.get",
    "aiplatform.sandboxEnvironments.list",
    "aiplatform.sandboxEnvironments.pause",
    "aiplatform.sandboxEnvironments.resume",
    "aiplatform.sandboxEnvironments.snapshot"
  ]
}

resource "google_project_iam_member" "gcp_role_sandbox_management_management_binding_0" {
  project = var.gcp_project
  role    = var.gcp_manage_custom_roles ? google_project_iam_custom_role.gcp_role_sandbox_management[0].name : format("projects/%s/roles/role_%s_sandbox_management", var.gcp_project, local.gcp_custom_role_prefix)
  member  = "serviceAccount:${google_service_account.management.email}"
}

resource "google_service_account_iam_member" "management_manager_token_creator" {
  for_each           = toset(compact([var.managing_service_account_email]))
  service_account_id = google_service_account.management.id
  role               = "roles/iam.serviceAccountTokenCreator"
  member             = "serviceAccount:${each.value}"
}

resource "google_service_account_iam_member" "management_manager_user" {
  for_each           = toset(compact([var.managing_service_account_email]))
  service_account_id = google_service_account.management.id
  role               = "roles/iam.serviceAccountUser"
  member             = "serviceAccount:${each.value}"
}

=== agents.tf ===
resource "google_project_iam_custom_role" "gcp_role_sandbox_templates" {
  count       = var.gcp_manage_custom_roles ? 1 : 0
  project     = var.gcp_project
  role_id     = format("role_%s_sandbox_templates", local.gcp_custom_role_prefix)
  title       = "${local.deployment_name}: Sandbox templates"
  description = "Used by ${local.deployment_name}. Allows creating, reading and deleting environment templates, which set a sandbox's image and internet access, under the selected reasoning engine. Resource prefix: ${local.resource_prefix}."
  stage       = "GA"
  permissions = [
    "aiplatform.sandboxEnvironmentTemplates.create",
    "aiplatform.sandboxEnvironmentTemplates.delete",
    "aiplatform.sandboxEnvironmentTemplates.get",
    "aiplatform.sandboxEnvironmentTemplates.list"
  ]
}

resource "google_vertex_ai_reasoning_engine_iam_member" "gcp_role_sandbox_templates_agents_engine_templates_0" {
  provider         = google-beta
  reasoning_engine = google_vertex_ai_reasoning_engine.agents_engine.name
  role             = var.gcp_manage_custom_roles ? google_project_iam_custom_role.gcp_role_sandbox_templates[0].name : format("projects/%s/roles/role_%s_sandbox_templates", var.gcp_project, local.gcp_custom_role_prefix)
  member           = "serviceAccount:${google_service_account.management.email}"
}

=== iam_propagation.tf ===
resource "time_sleep" "gcp_iam_propagation" {
  create_duration = "120s"
  depends_on = [
    google_project_iam_member.gcp_role_sandbox_heartbeat_management_binding_0,
    google_project_iam_member.gcp_role_sandbox_management_management_binding_0,
    google_service_account_iam_member.management_manager_token_creator,
    google_service_account_iam_member.management_manager_user,
    google_vertex_ai_reasoning_engine_iam_member.gcp_role_sandbox_templates_agents_engine_templates_0
  ]
}

=== registration.tf ===
resource "terraform_data" "deployment_registration" {
  input = {
    platform                    = local.deployment_platform
    token                       = var.token
    name                        = var.name
    resource_prefix             = local.resource_prefix
    setup_target                = ""
    setup_import_format_version = 1
    setup_fingerprint           = ""
    setup_fingerprint_version   = 0
    management_url              = var.management_url
    management_config           = local.deployment_management_config
    stack_settings              = local.deployment_settings
    resources                   = local.deployment_resources
    inputValues                 = {}
  }
  depends_on = [
    google_vertex_ai_reasoning_engine.agents_engine,
    google_service_account.management,
    google_project_iam_custom_role.gcp_role_sandbox_heartbeat,
    google_project_iam_member.gcp_role_sandbox_heartbeat_management_binding_0,
    google_project_iam_custom_role.gcp_role_sandbox_management,
    google_project_iam_member.gcp_role_sandbox_management_management_binding_0,
    google_service_account_iam_member.management_manager_token_creator,
    google_service_account_iam_member.management_manager_user,
    google_project_iam_custom_role.gcp_role_sandbox_templates,
    google_vertex_ai_reasoning_engine_iam_member.gcp_role_sandbox_templates_agents_engine_templates_0,
    time_sleep.gcp_iam_propagation
  ]
}

=== outputs.tf ===
output "deployment_target" {
  value       = "gcp"
  description = "Terraform module target."
}

output "deployment_resource_prefix" {
  value       = local.resource_prefix
  description = "Physical resource prefix."
}

output "deployment_platform" {
  value       = local.deployment_platform
  description = "Target platform."
}

output "deployment_region" {
  value       = local.deployment_region
  description = "Target cloud region or location."
}

output "deployment_setup_target" {
  value       = ""
  description = "Setup target."
}

output "deployment_setup_import_format_version" {
  value       = 1
  description = "Setup registration payload format version."
}

output "deployment_setup_fingerprint" {
  value       = ""
  description = "Setup compatibility fingerprint."
}

output "deployment_setup_fingerprint_version" {
  value       = 0
  description = "Setup fingerprint algorithm version."
}

output "deployment_management_config" {
  value       = jsonencode(local.deployment_management_config)
  description = "Deployment registration management configuration JSON."
}

output "deployment_stack_settings" {
  value       = jsonencode(local.deployment_settings)
  description = "Deployment registration settings JSON."
  sensitive   = true
}

output "deployment_resources" {
  value       = jsonencode(local.deployment_resources)
  description = "Deployment registration resource metadata JSON."
}

=== README.md ===
# Deployment setup - byo-sandbox

Target: `gcp`.

This module creates setup-owned infrastructure, grants the management access needed after setup, and prepares deployment registration metadata. Review the generated `.tf` files before applying; each resource file maps to one setup resource.

## Inputs

Required:

- `token`: install token from the setup page.
- `name`: deployment name to include in the registration metadata.

Common optional settings:

- `resource_prefix`: stable physical-name prefix. Leave empty to generate one.
- `management_url`: optional management endpoint used by pull-style runtimes.
- `deployment_model`: `push` or `pull`.
- `updates_mode`: `auto` or `approval-required`.
- `telemetry_mode`: `off`, `auto`, or `approval-required`.
- `heartbeats_mode`: `off` or `on`.
- `advanced_settings_json`: complete advanced deployment settings JSON. Most installs should keep the generated default.
- `advanced_settings_overlay_json`: partial advanced settings merged over package defaults, preserving generated values such as compute selections.

GCP settings:

- `gcp_project`: target GCP project ID.
- `gcp_region`: target GCP region.
- `managing_service_account_email`: management service account allowed to impersonate setup-created identities.
- `gcp_manage_custom_roles`: whether this module creates project custom roles.
- `gcp_custom_role_prefix`: custom role ID prefix when roles are managed outside this module.

## Run

Use your organization's normal backend and approval workflow. A typical local review looks like:

```bash
export TF_VAR_name="byo-sandbox"
export TF_VAR_token="..."
terraform init
terraform validate
terraform plan -out=tfplan
terraform apply tfplan
```

## Registration

This module exposes `deployment_management_config`, `deployment_stack_settings`, `deployment_resources`, and (when the stack declares deployer inputs) `deployment_input_values` outputs for registration flows managed outside Terraform.

## Outputs

- `deployment_management_config`: management endpoint and credential-boundary metadata.
- `deployment_stack_settings`: deployment settings JSON assembled from typed variables, package defaults, and advanced-setting overlays.
- `deployment_resources`: setup-owned resource metadata handed to the deployment runtime.
- `deployment_input_values`: deployer input values JSON, emitted only when the stack declares deployer inputs.
- `deployment_id` and `deployment_token`: emitted only when Terraform performs registration.
